[project]
name = "rti_agent"
version = "0.1.0"
description = "AI-powered RTI automation system for India"
authors = [
  { name = "Akash Gaikwad", email = "acashtech28@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
  # Core Python libraries
  "python-dateutil",
  "pydantic",

  # LangChain & LangGraph
  "langchain>=0.1.14",
  "langgraph",

  # MCP client dependencies
  "openai",
  "googletrans==4.0.0-rc1",
  "requests",

  # MongoDB
  "pymongo",

  # Email validation
  "email-validator",

  # Optional Web API
  "fastapi",
  "uvicorn",

  # Utilities
  "python-dotenv",
  "rich"
]

[tool.uv]

