[project]
name = "rti_agent"
version = "0.1.0"
description = "AI-powered RTI automation system for India"
authors = [
  { name = "Akash Gaikwad", email = "acashtech28@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
  # Core Libraries
  "python-dateutil",
  "pydantic",
  "python-dotenv",
  "rich",

  # LangChain + LangGraph Ecosystem
  "langchain",
  "langchain-community",
  "langchain-core",
  "langchain-openai",
  "langgraph",

  # LLM Integrations
  "openai",
  "googletrans",
  "requests",

  # Memory + Database
  "pymongo",
  "redis",

  # Web & API
  "fastapi",
  "uvicorn",

  # Testing & CI/CD utilities
  "pytest",
  "httpx",
  "black",
  "isort",
  "flake8"
]

[tool.uv]
