[project]
name = "rti_agent"
version = "0.1.0"
description = "AI-powered RTI automation system for India"
authors = [
  { name = "Akash Gaikwad", email = "acashtech28@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
  # Core Libraries
  "python-dateutil",
  "pydantic",
  "python-dotenv",
  "pydantic[email]",
  "rich",

  # LangChain + LangGraph Ecosystem
  "langchain",
  "langchain-community",
  "langchain-core",
  "langchain-openai",
  "langgraph",
  "langchain-groq",
  "libretranslatepy",

  # LLM Integrations
  "openai",
  "googletrans",
  "requests",
  "groq",
  "langchain-google-genai",
  "google-generativeai",

  # Memory + Database
  "pymongo",
  "redis",
  "motor",  # async MongoDB client

  # Web & API
  "fastapi",
  "uvicorn",
  "aiohttp",

  # Testing & CI/CD utilities
  "pytest",
  "httpx",
  "black",
  "isort",
  "flake8",
  "pre-commit"
]

[tool.uv]
